--- a/web/index.html
+++ b/web/index.html
@@ -11,11 +11,11 @@
         var firebaseConfig = {
             apiKey: "AIzaSyCYTzSA_GFMcH3ruhP2FPFPiOeq4RchhVE",
             authDomain: "fixfinder-d83f2.firebaseapp.com",
-            projectId: "fixfinder-d83f2",
-            storageBucket: "fixfinder-d83f2.appspot.com",
-            messagingSenderId: "120600345237",
-            appId: "1:120600345237:web:786fe5d124af60be99b99c",
-            measurementId: "G-CK435X03C3"
+             projectId: "fixfinder-d83f2",
+             storageBucket: "fixfinder-d83f2.firebasestorage.app",
+             messagingSenderId: "120600345237",
+             appId: "1:120600345237:web:786fe5d124af60be99b99c",
+             measurementId: "G-CK435X03C3"
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
