--- a/web/index.html
+++ b/web/index.html
@@ -38,20 +38,20 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+    <meta name="description" content="FixFinder™ Official Site — Discover trusted reviews and skilled professionals for repairs, remodeling, and more. Quickly get quotes and connect with top experts near you. Fast, Free & Reliable.">
     <meta name="theme-color" content="#FF0083">
     <div id="recaptcha-container"></div>
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="fixfinder">
+    <meta name="apple-mobile-web-app-title" content="FixFinder">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
 
-    <title>fixfinder</title>
+    <title>FixFinder</title>
     <link rel="manifest" href="manifest.json">
 
     <script>
